workloads/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: obscep
    external-dns.alpha.kubernetes.io/hostname: web1.obscep.com
    external-dns.alpha.kubernetes.io/hostname: web2.obscep.com
spec:
  rules:
  - host: web1.obscep.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-un
            port:
              number: 80
  - host: web2.obscep.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-deux
            port:
              number: 80
